--- a/index.html
+++ b/index.html
@@ -77,27 +77,34 @@
             </ul>
           </div>      
           <!-- logo and name -->
-         <div class="flex justify-center items-center w-48 mx-auto">
+          <div class="flex justify-center items-center mr-44">
+            <div class="flex justify-between items-center w-48 mx-auto">
+              <div class="flex justify-center items-center">
+                <a class="text-3xl text-[#00D6CA] font-poppins">Fruit Burst</a>
+                <img src="./images/logo.png" class="w-[30px]" alt="">
+              </div>
+            </div>
+          </div>
+         <!-- <div class="flex justify-between items-center w-48 mx-auto">
           <div class="flex justify-center items-center">
             <a
             class="text-3xl text-[#00D6CA] font-poppins"
             >Fruit Burst</a>
               <img src="./images/logo.png" class="w-[30px] " alt="">
         </div>
-         </div>
+         </div> -->
         <!-- search bar -->
-          <div class="mr-2">
+          <div class="ml-[200px] mr-2">
             <div class="relative">
               <form>
-                <input type="text" placeholder="Search here" class="input w-full pr-16" /> 
+                <input type="text" placeholder="Search here" class="input pr-16" /> 
                 <button class="btn  hover:bg-white border-0 bg-white absolute top-0 right-0 rounded-full"><i class='bx bx-search-alt-2 text-2xl'></i></button>
              </form>
               </div>
         </div>
       </nav>
     </header>
-    <main>
-        
+    <main> 
     </main>
     <footer></footer>
   </body>
