--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </ul>
           </div>      
           <!-- logo and name -->
-          <div class="flex justify-center items-center mr-44">
+          <div class="flex justify-center items-center mr-60">
             <div class="flex justify-between items-center w-48 mx-auto">
               <div class="flex justify-center items-center">
                 <a class="text-3xl text-[#00D6CA] font-poppins">Fruit Burst</a>
@@ -94,7 +94,7 @@
         </div>
          </div> -->
         <!-- search bar -->
-          <div class="ml-[200px] mr-2">
+          <div class="ml-[250px]">
             <div class="relative">
               <form>
                 <input type="text" placeholder="Search here" class="input pr-16" /> 
