--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="flex justify-center items-center mr-60">
             <div class="flex justify-between items-center w-48 mx-auto">
               <div class="flex justify-center items-center">
-                <a class="text-3xl text-[#00D6CA] font-poppins">Fruit Burst</a>
+                <a class="text-3xl text-[#ffffff] font-poppins">Fruit Burst</a>
                 <img src="./images/logo.png" class="w-[30px]" alt="">
               </div>
             </div>
@@ -94,7 +94,7 @@
         </div>
          </div> -->
         <!-- search bar -->
-          <div class="ml-[250px]">
+          <div class="ml-[190px] mr-2">
             <div class="relative">
               <form>
                 <input type="text" placeholder="Search here" class="input pr-16" /> 
