--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </header>
     <main> 
       <!--  main banner -->
-      <section class="max-w-screen-xl mx-auto mt-28 relative mb-28">
+      <section class="max-w-screen-xl max-h-[600px] mx-auto mt-28 relative mb-28">
         <div class="carousel w-full rounded-xl">
           <div id="slide1" class="carousel-item relative w-full">
             <div class="hero min-h-screen bg-blend-screen" style="background-image: url(./images/banner1.png);">
@@ -203,6 +203,35 @@
     </div>
   </section>
       </section>
+      <!-- timer section -->
+         <section>
+          <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+            <div class="flex flex-col p-2 text-neutral-content">
+              <span class="countdown font-mono text-5xl">
+                <span style="--value:15;"></span>
+              </span>
+              days
+            </div> 
+            <div class="flex flex-col p-2 text-neutral-content">
+              <span class="countdown font-mono text-5xl">
+                <span style="--value:10;"></span>
+              </span>
+              hours
+            </div> 
+            <div class="flex flex-col p-2 text-neutral-content">
+              <span class="countdown font-mono text-5xl">
+                <span style="--value:24;"></span>
+              </span>
+              min
+            </div> 
+            <div class="flex flex-col p-2 text-neutral-content">
+              <span class="countdown font-mono text-5xl">
+                <span style="--value:22;"></span>
+              </span>
+              sec
+            </div>
+          </div>
+         </section>
     </main>
 
     <footer></footer>
