--- a/index.html
+++ b/index.html
@@ -204,32 +204,44 @@
   </section>
       </section>
       <!-- timer section -->
-         <section>
-          <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
-            <div class="flex flex-col p-2 text-neutral-content">
-              <span class="countdown font-mono text-5xl">
-                <span style="--value:15;"></span>
-              </span>
-              days
-            </div> 
-            <div class="flex flex-col p-2 text-neutral-content">
-              <span class="countdown font-mono text-5xl">
-                <span style="--value:10;"></span>
-              </span>
-              hours
-            </div> 
-            <div class="flex flex-col p-2 text-neutral-content">
-              <span class="countdown font-mono text-5xl">
-                <span style="--value:24;"></span>
-              </span>
-              min
-            </div> 
-            <div class="flex flex-col p-2 text-neutral-content">
-              <span class="countdown font-mono text-5xl">
-                <span style="--value:22;"></span>
-              </span>
-              sec
-            </div>
+         <section class="max-w-screen-xl mx-auto mt-64 mb-28">
+          <div class="flex items-center justify-between">
+             <div>
+               <h2 class="text-5xl font-bold mb-10">Deal of the day</h2>
+               <p class="text-[#12121299]">Contrary to popular belief, is not simply random text. It has roots in a piece of classical<br>Latin literature from 45 BC, making it over 2000 years old.</p>
+             </div>
+             <div>
+              <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+                <div class="flex flex-col p-2 text-neutral-content text-[#12121299]">
+                  <span class="countdown font-mono text-5xl text-black">
+                    <span style="--value:15"></span>
+                   </span>
+                  days
+                </div>
+                <div class="flex items-center justify-center"><i class='bx bx-dots-vertical-rounded text-2xl'></i></div> 
+
+                <div class="flex flex-col p-2 text-neutral-content text-[#12121299]">
+                  <span class="countdown font-mono text-5xl text-black">
+                    <span style="--value:10;"></span>
+                  </span>
+                  hours
+                </div> <div class="flex items-center justify-center"><i class='bx bx-dots-vertical-rounded text-2xl'></i></div>
+
+                <div class="flex flex-col p-2 text-neutral-content text-[#12121299]">
+                  <span class="countdown font-mono text-5xl text-black">
+                    <span style="--value:24;"></span>
+                  </span>
+                  min
+                </div> <div class="flex items-center justify-center"><i class='bx bx-dots-vertical-rounded text-2xl'></i></div>
+                
+                <div class="flex flex-col p-2 text-neutral-content text-[#12121299]">
+                  <span class="countdown font-mono text-5xl text-black">
+                    <span style="--value:22;"></span>
+                  </span>
+                  sec
+                </div>
+              </div>
+             </div>
           </div>
          </section>
     </main>
