--- a/index.html
+++ b/index.html
@@ -109,10 +109,11 @@
     </header>
     <main> 
       <!--  main banner -->
-      <section class="max-w-screen-xl max-h-[600px] mx-auto mt-28 relative mb-28">
-        <div class="carousel w-full rounded-xl">
+      <section class="max-w-screen-xl mx-auto mt-28 relative mb-28">
+        <div class="carousel w-full  rounded-xl">
+
           <div id="slide1" class="carousel-item relative w-full">
-            <div class="hero min-h-screen bg-blend-screen" style="background-image: url(./images/banner1.png);">
+            <div class="hero min-h-screen" style="background-image: url(./images/banner1.png);">
               <div class=""></div>
               <div class="hero-content text-center text-neutral-content">
                 <div class="max-w-md">
@@ -178,64 +179,65 @@
           </div>
         </div>
         <!-- white banner -->
-  <section class="max-w-screen-lg mx-auto">
-    <div class="flex justify-evenly items-center bg-white rounded-xl absolute left-[230px] -bottom-16 px-5 py-5">
+
+   <section class="max-w-screen-lg mx-auto">
+    <div class="flex justify-evenly items-center bg-white rounded-xl absolute left-[230px] -bottom-14 px-5 py-5">
       <div class="px-5 items-center">
-        <img src="./images/fruit1.png" class="w-28" alt="">
+        <img src="./images/fruit1.png" class="w-28 h-[85px]" alt="">
         <p class="text-center">Strawberry</p>
       </div>
       <div class="px-5 items-center">
-        <img src="./images/fruit2.png" class="w-28 h-[82px]" alt="">
+        <img src="./images/fruit2.png" class="w-28 h-[85px]" alt="">
         <p class="text-center">Strawberry</p>
       </div>
       <div class="px-5 items-center">
-        <img src="./images/fruit3.png" class="w-28" alt="">
+        <img src="./images/fruit3.png" class="w-28 h-[85px]" alt="">
         <p class="text-center">Strawberry</p>
       </div>
       <div class="px-5 items-center">
-        <img src="./images/fruit4.png" class="w-28" alt="">
+        <img src="./images/fruit4.png" class="w-28 h-[85px]" alt="">
         <p class="text-center">Strawberry</p>
       </div>
       <div class="px-5 items-center">
-        <img src="./images/fruit5.png" class="w-28" alt="">
+        <img src="./images/fruit5.png" class="w-28 h-[85px]" alt="">
         <p class="text-center">Strawberry</p>
       </div>
     </div>
   </section>
       </section>
       <!-- timer section -->
-         <section class="max-w-screen-xl mx-auto mt-64 mb-28">
-          <div class="flex items-center justify-between">
+          <section class=" max-w-screen-xl mx-auto mt-60 mb-44">
+          <div class="flex items-center justify-between ">
              <div>
                <h2 class="text-5xl font-bold mb-10">Deal of the day</h2>
                <p class="text-[#12121299]">Contrary to popular belief, is not simply random text. It has roots in a piece of classical<br>Latin literature from 45 BC, making it over 2000 years old.</p>
              </div>
              <div>
               <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
-                <div class="flex flex-col p-2 text-neutral-content text-[#12121299]">
-                  <span class="countdown font-mono text-5xl text-black">
+                <div class="flex flex-col p-2 text-neutral-content text-black">
+                  <span class="countdown font-mono text-5xl">
                     <span style="--value:15"></span>
                    </span>
                   days
                 </div>
                 <div class="flex items-center justify-center"><i class='bx bx-dots-vertical-rounded text-2xl'></i></div> 
 
-                <div class="flex flex-col p-2 text-neutral-content text-[#12121299]">
-                  <span class="countdown font-mono text-5xl text-black">
+                <div class="flex flex-col p-2 text-neutral-content text-black">
+                  <span class="countdown font-mono text-5xl">
                     <span style="--value:10;"></span>
                   </span>
                   hours
                 </div> <div class="flex items-center justify-center"><i class='bx bx-dots-vertical-rounded text-2xl'></i></div>
 
-                <div class="flex flex-col p-2 text-neutral-content text-[#12121299]">
-                  <span class="countdown font-mono text-5xl text-black">
+                <div class="flex flex-col p-2 text-neutral-content text-black">
+                  <span class="countdown font-mono text-5xl">
                     <span style="--value:24;"></span>
                   </span>
                   min
                 </div> <div class="flex items-center justify-center"><i class='bx bx-dots-vertical-rounded text-2xl'></i></div>
                 
-                <div class="flex flex-col p-2 text-neutral-content text-[#12121299]">
-                  <span class="countdown font-mono text-5xl text-black">
+                <div class="flex flex-col p-2 text-neutral-content text-black">
+                  <span class="countdown font-mono text-5xl">
                     <span style="--value:22;"></span>
                   </span>
                   sec
@@ -243,7 +245,7 @@
               </div>
              </div>
           </div>
-         </section>
+         </section> 
     </main>
 
     <footer></footer>
