all banner done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="cupcake">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -113,7 +113,7 @@
         <div class="carousel w-full  rounded-xl">
 
           <div id="slide1" class="carousel-item relative w-full">
-            <div class="hero min-h-screen" style="background-image: url(./images/banner1.png);">
+            <div class="hero h-[700px]" style="background-image: url(./images/banner1.png);">
               <div class=""></div>
               <div class="hero-content text-center text-neutral-content">
                 <div class="max-w-md">
@@ -129,7 +129,7 @@
             </div>
           </div> 
           <div id="slide2" class="carousel-item relative w-full">
-            <div class="hero min-h-screen" style="background-image: url(./images/banner2.png);">
+            <div class="hero h-[700px]" style="background-image: url(./images/banner2.png);">
               <div class=""></div>
               <div class="hero-content text-center text-neutral-content">
                 <div class="max-w-md">
@@ -145,7 +145,7 @@
             </div>
           </div> 
           <div id="slide3" class="carousel-item relative w-full">
-            <div class="hero min-h-screen" style="background-image: url(./images/banner3.png);">
+            <div class="hero h-[700px]" style="background-image: url(./images/banner3.png);">
               <div class=""></div>
               <div class="hero-content text-center text-neutral-content">
                 <div class="max-w-md">
@@ -161,7 +161,7 @@
             </div>
           </div> 
           <div id="slide4" class="carousel-item relative w-full">
-            <div class="hero min-h-screen" style="background-image: url(./images/banner4.png);">
+            <div class="hero h-[700px]" style="background-image: url(./images/banner4.png);">
               <div class=""></div>
               <div class="hero-content text-center text-neutral-content">
                 <div class="max-w-md">
