--- a/index.html
+++ b/index.html
@@ -246,6 +246,45 @@
              </div>
           </div>
          </section> 
+         <!-- modal details section -->
+         <section>
+          <div class="card w-96">
+            <figure><img src="/images/fruit6.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2 class="text-3xl font-semibold text-center">12.90$ - 18.85$</h2>
+              <p class="text-center">Apples</p>
+              <div class="rating justify-center">
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              </div>
+              <!-- modal button -->
+              <div class="card-actions items-center justify-center">
+               <!-- Open the modal using ID.showModal() method -->
+<button class="btn" onclick="my_modal_1.showModal()">Details</button>
+<dialog id="my_modal_1" class="modal">
+  <form method="dialog" class="modal-box">
+    <div class="flex justify-center items-center">
+      <img src="./images/fruit8.png" alt="">
+    </div>
+    <h3 class="font-bold text-lg">Red Dragon</h3>
+    <p class="py-4">Professional employees are there for you to pick the most<br>amazing and fresh fruits.</p>
+  
+    <div class="modal-action items-center justify-center">
+      <!-- if there is a button in form, it will close the modal -->
+      <div class="">
+        <button class="btn mr-5">Close</button>
+      <button class="btn ml-5">Buy now</button>
+      </div>
+    </div>
+  </form>
+</dialog>
+    </div>
+  </div>
+</div>
+</section>
     </main>
 
     <footer></footer>
