--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
 				</div>
 				<!-- menubar -->
 				<div class="flex-1">
-					<h1 class="text-5xl font-semibold text-white mr-5">Fruit Burst</h1>
+					<h1
+						class="text-2xl md:text-3xl lg:text-5xl font-semibold text-white mr-5"
+					>
+						Fruit Burst
+					</h1>
 					<img src="./images/logo.png" class="w-[40px]" alt="" />
 				</div>
 				<!-- searchbar -->
@@ -271,8 +275,12 @@
 				</section>
 			</section>
 			<!-- timer section -->
-			<section class="max-w-screen-xl mx-auto mt-60 mb-44">
-				<div class="flex items-center justify-between">
+			<section
+				class="max-w-sm md:max-w-screen-xl lg:max-w-screen-xl mx-auto mt-60 mb-44"
+			>
+				<div
+					class="flex flex-col md:flex-row lg:flex-row items-center justify-between"
+				>
 					<div>
 						<h2 class="text-5xl font-bold mb-10">Deal of the day</h2>
 						<p class="text-[#12121299]">
@@ -282,7 +290,9 @@
 						</p>
 					</div>
 					<div>
-						<div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+						<div
+							class="grid grid-flow-col gap-2 md:gap-5 lg:gap-5 text-center auto-cols-max"
+						>
 							<div class="flex flex-col p-2 text-neutral-content text-black">
 								<span class="countdown font-mono text-5xl">
 									<span style="--value: 15"></span>
