--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<img src="./images/logo.png" class="w-[40px]" alt="" />
 				</div>
 				<!-- searchbar -->
-				<div class="relative invisible md:visible lg:visible">
+				<div class="relative invisible md:visible lg:visible mr-5">
 					<form>
 						<input
 							type="text"
@@ -377,7 +377,10 @@
 							<!-- modal button -->
 							<div class="card-actions items-center justify-center">
 								<!-- Open the modal using ID.showModal() method -->
-								<button class="btn" onclick="my_modal_1.showModal()">
+								<button
+									class="btn btn-ghost text-[#F85559]"
+									onclick="my_modal_1.showModal()"
+								>
 									Details
 								</button>
 								<dialog id="my_modal_1" class="modal">
@@ -474,7 +477,10 @@
 							<!-- modal button -->
 							<div class="card-actions items-center justify-center">
 								<!-- Open the modal using ID.showModal() method -->
-								<button class="btn" onclick="my_modal_2.showModal()">
+								<button
+									class="btn btn-ghost text-[#F85559]"
+									onclick="my_modal_2.showModal()"
+								>
 									Details
 								</button>
 								<dialog id="my_modal_2" class="modal">
@@ -487,7 +493,37 @@
 											Professional employees are there for you to pick the
 											most<br />amazing and fresh fruits.
 										</p>
-
+										<!-- rating -->
+										<div class="text-center">
+											<div class="rating">
+												<input
+													type="radio"
+													name="rating-2"
+													class="mask mask-star-2 bg-orange-400"
+												/>
+												<input
+													type="radio"
+													name="rating-2"
+													class="mask mask-star-2 bg-orange-400"
+													checked
+												/>
+												<input
+													type="radio"
+													name="rating-2"
+													class="mask mask-star-2 bg-orange-400"
+												/>
+												<input
+													type="radio"
+													name="rating-2"
+													class="mask mask-star-2 bg-orange-400"
+												/>
+												<input
+													type="radio"
+													name="rating-2"
+													class="mask mask-star-2 bg-orange-400"
+												/>
+											</div>
+										</div>
 										<div class="modal-action items-center justify-center">
 											<!-- if there is a button in form, it will close the modal -->
 											<div class="">
@@ -541,7 +577,10 @@
 							<!-- modal button -->
 							<div class="card-actions items-center justify-center">
 								<!-- Open the modal using ID.showModal() method -->
-								<button class="btn" onclick="my_modal_3.showModal()">
+								<button
+									class="btn btn-ghost text-[#F85559]"
+									onclick="my_modal_3.showModal()"
+								>
 									Details
 								</button>
 								<dialog id="my_modal_3" class="modal">
@@ -554,7 +593,37 @@
 											Professional employees are there for you to pick the
 											most<br />amazing and fresh fruits.
 										</p>
-
+										<!-- rating -->
+										<div class="text-center">
+											<div class="rating">
+												<input
+													type="radio"
+													name="rating-2"
+													class="mask mask-star-2 bg-orange-400"
+												/>
+												<input
+													type="radio"
+													name="rating-2"
+													class="mask mask-star-2 bg-orange-400"
+													checked
+												/>
+												<input
+													type="radio"
+													name="rating-2"
+													class="mask mask-star-2 bg-orange-400"
+												/>
+												<input
+													type="radio"
+													name="rating-2"
+													class="mask mask-star-2 bg-orange-400"
+												/>
+												<input
+													type="radio"
+													name="rating-2"
+													class="mask mask-star-2 bg-orange-400"
+												/>
+											</div>
+										</div>
 										<div class="modal-action items-center justify-center">
 											<!-- if there is a button in form, it will close the modal -->
 											<div class="">
@@ -608,7 +677,10 @@
 							<!-- modal button -->
 							<div class="card-actions items-center justify-center">
 								<!-- Open the modal using ID.showModal() method -->
-								<button class="btn" onclick="my_modal_4.showModal()">
+								<button
+									class="btn btn-ghost text-[#F85559]"
+									onclick="my_modal_4.showModal()"
+								>
 									Details
 								</button>
 								<dialog id="my_modal_4" class="modal">
@@ -621,7 +693,37 @@
 											Professional employees are there for you to pick the
 											most<br />amazing and fresh fruits.
 										</p>
-
+										<!-- rating -->
+										<div class="text-center">
+											<div class="rating">
+												<input
+													type="radio"
+													name="rating-2"
+													class="mask mask-star-2 bg-orange-400"
+												/>
+												<input
+													type="radio"
+													name="rating-2"
+													class="mask mask-star-2 bg-orange-400"
+													checked
+												/>
+												<input
+													type="radio"
+													name="rating-2"
+													class="mask mask-star-2 bg-orange-400"
+												/>
+												<input
+													type="radio"
+													name="rating-2"
+													class="mask mask-star-2 bg-orange-400"
+												/>
+												<input
+													type="radio"
+													name="rating-2"
+													class="mask mask-star-2 bg-orange-400"
+												/>
+											</div>
+										</div>
 										<div class="modal-action items-center justify-center">
 											<!-- if there is a button in form, it will close the modal -->
 											<div class="">
