--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 					extend: {
 						backgroundImage: {
 							"banner-one": "url('./images/banner1.png')",
+							"fruit-banner": "url('./images/team.PNG')",
 						},
 						colors: {
 							clifford: "#da373d",
@@ -127,10 +128,7 @@
 			<section class="max-w-screen-xl mx-auto mt-28 relative mb-28">
 				<div class="carousel w-full rounded-xl">
 					<div id="slide1" class="carousel-item relative w-full">
-						<div
-							class="hero h-[700px]"
-							style="background-image: url(./images/banner1.png)"
-						>
+						<div class="hero h-[700px] bg-black bg-opacity-5 bg-banner-one">
 							<div class=""></div>
 							<div class="hero-content text-center text-neutral-content">
 								<div class="max-w-md">
@@ -253,15 +251,15 @@
 					>
 						<div class="px-5 items-center">
 							<img src="./images/fruit1.png" class="w-28 h-[85px]" alt="" />
-							<p class="text-center">Strawberry</p>
+							<p class="text-center">Grapes</p>
 						</div>
 						<div class="px-5 items-center">
 							<img src="./images/fruit2.png" class="w-28 h-[85px]" alt="" />
-							<p class="text-center">Strawberry</p>
+							<p class="text-center">Orange</p>
 						</div>
 						<div class="px-5 items-center">
 							<img src="./images/fruit3.png" class="w-28 h-[85px]" alt="" />
-							<p class="text-center">Strawberry</p>
+							<p class="text-center">Mango</p>
 						</div>
 						<div class="px-5 items-center">
 							<img src="./images/fruit4.png" class="w-28 h-[85px]" alt="" />
@@ -741,6 +739,118 @@
 				</div>
 				<div class="flex justify-center items-center mt-12">
 					<button class="btn bg-[#F85559] text-white">shop All</button>
+				</div>
+			</section>
+			<!-- team section -->
+			<section
+				class="max-w-screen-xl mx-auto rounded-lg bg-blend-darken opacity-100 bg-fruit-banner h-full md:h-[700px] lg:h-[700px]"
+			>
+				<h1 class="text-3xl font-semibold text-white text-center pt-28 pb-10">
+					Meet the team section
+				</h1>
+				<p class="text-white text-center">
+					Contrary to popular belief, is not simply random text. It has roots in
+					a piece of classical<br />Latin literature from 45 BC, making it over
+					2000 years old.
+				</p>
+				<!-- team member -->
+				<div class="grid grid-cols-1 md:grid-cols-4 lg:grid-cols-4 mt-10">
+					<!-- card1 -->
+					<div class="card">
+						<figure class="px-10 pt-10">
+							<img src="/images/member1.png" alt="Shoes" class="rounded-xl" />
+						</figure>
+						<div class="card-body items-center text-center">
+							<h2 class="card-title text-white">Awlad Hossain</h2>
+							<p class="text-white">Fruits Expert</p>
+							<div class="card-actions">
+								<i
+									class="bx bxl-facebook bg-red-500 rounded-full"
+									style="color: #f2eeee"
+								></i>
+								<i
+									class="bx bxl-twitter bg-red-500 rounded-full"
+									style="color: #f2eeee"
+								></i>
+								<i
+									class="bx bxl-linkedin bg-red-500 rounded-full"
+									style="color: #f2eeee"
+								></i>
+							</div>
+						</div>
+					</div>
+					<!-- card2 -->
+					<div class="card">
+						<figure class="px-10 pt-10">
+							<img src="/images/member2.png" alt="Shoes" class="rounded-xl" />
+						</figure>
+						<div class="card-body items-center text-center">
+							<h2 class="card-title text-white">Safia Chowdhury</h2>
+							<p class="text-white">Fruits Expert</p>
+							<div class="card-actions">
+								<i
+									class="bx bxl-facebook bg-red-500 rounded-full"
+									style="color: #f2eeee"
+								></i>
+								<i
+									class="bx bxl-twitter bg-red-500 rounded-full"
+									style="color: #f2eeee"
+								></i>
+								<i
+									class="bx bxl-linkedin bg-red-500 rounded-full"
+									style="color: #f2eeee"
+								></i>
+							</div>
+						</div>
+					</div>
+					<!-- card3 -->
+					<div class="card">
+						<figure class="px-10 pt-10">
+							<img src="/images/member3.png" alt="Shoes" class="rounded-xl" />
+						</figure>
+						<div class="card-body items-center text-center">
+							<h2 class="card-title text-white">Rokib Hossain</h2>
+							<p class="text-white">Fruits Expert</p>
+							<div class="card-actions">
+								<i
+									class="bx bxl-facebook bg-red-500 rounded-full"
+									style="color: #f2eeee"
+								></i>
+								<i
+									class="bx bxl-twitter bg-red-500 rounded-full"
+									style="color: #f2eeee"
+								></i>
+								<i
+									class="bx bxl-linkedin bg-red-500 rounded-full"
+									style="color: #f2eeee"
+								></i>
+							</div>
+						</div>
+					</div>
+					<!-- card4 -->
+					<div class="card">
+						<figure class="px-10 pt-10">
+							<img src="/images/member4.png" alt="Shoes" class="rounded-xl" />
+						</figure>
+						<div class="card-body items-center text-center">
+							<h2 class="card-title text-white">Chaity</h2>
+							<p class="text-white">Fruits Expert</p>
+							<div class="card-actions">
+								<i
+									class="bx bxl-facebook bg-red-500 rounded-full"
+									style="color: #f2eeee"
+								></i>
+								<i
+									class="bx bxl-twitter bg-red-500 rounded-full"
+									style="color: #f2eeee"
+								></i>
+								<i
+									class="bx bxl-linkedin bg-red-500 rounded-full"
+									style="color: #f2eeee"
+								></i>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 		</main>
