--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
 			</section>
 			<!-- team section -->
 			<section
-				class="max-w-screen-xl mx-auto rounded-lg bg-blend-darken opacity-100 bg-fruit-banner h-full md:h-[700px] lg:h-[700px]"
+				class="max-w-screen-xl mx-auto rounded-lg bg-blend-darken opacity-100 bg-fruit-banner h-full md:h-[700px] lg:h-[700px] mb-24"
 			>
 				<h1 class="text-3xl font-semibold text-white text-center pt-28 pb-10">
 					Meet the team section
@@ -850,6 +850,107 @@
 								></i>
 							</div>
 						</div>
+					</div>
+				</div>
+			</section>
+			<!-- why choose us section -->
+			<section class="max-w-screen-xl mx-auto">
+				<h1 class="text-3xl font-semibold text-black text-center mb-10">
+					Why Choose Us
+				</h1>
+				<p class="text-black text-center mb-24">
+					Contrary to popular belief, is not simply random text. It has roots in
+					a piece of classical<br />Latin literature from 45 BC, making it over
+					2000 years old.
+				</p>
+				<!-- content section -->
+				<div
+					class="flex flex-col md:flex-row lg:flex-row items-center justify-between"
+				>
+					<div class="">
+						<div class="flex items-center self-start">
+							<img
+								src="./images/team icon.png"
+								alt=""
+								class="mr-5 rounded-full bg-slate-300 p-5"
+							/>
+							<h2 class="text-2xl font-semibold">Dedicated Team</h2>
+						</div>
+						<hr class="border-1 border-black w-32 mt-5 mb-5" />
+						<p class="text-[#12121299] mb-5">
+							Professional employees are there for you to pick<br />the most
+							amazing and fresh fruits.
+						</p>
+						<div class="flex items-center self-start">
+							<img
+								src="./images/team icon.png"
+								alt=""
+								class="mr-5 rounded-full bg-slate-300 p-5"
+							/>
+							<h2 class="text-2xl font-semibold">Dedicated Team</h2>
+						</div>
+						<hr class="border-1 border-black w-32 mt-5 mb-5" />
+						<p class="text-[#12121299] mb-5">
+							Professional employees are there for you to pick<br />the most
+							amazing and fresh fruits.
+						</p>
+						<div class="flex items-center self-start">
+							<img
+								src="./images/team icon.png"
+								alt=""
+								class="mr-5 rounded-full bg-slate-300 p-5"
+							/>
+							<h2 class="text-2xl font-semibold">Dedicated Team</h2>
+						</div>
+						<hr class="border-1 border-black w-32 mt-5 mb-5" />
+						<p class="text-[#12121299] mb-5">
+							Professional employees are there for you to pick<br />the most
+							amazing and fresh fruits.
+						</p>
+					</div>
+					<div class="">
+						<img src="./images/whychoose1.png" alt="" class="w-[400px]" />
+					</div>
+					<div class="">
+						<div class="flex items-center self-start">
+							<img
+								src="./images/team icon.png"
+								alt=""
+								class="mr-5 rounded-full bg-slate-300 p-5"
+							/>
+							<h2 class="text-2xl font-semibold">Dedicated Team</h2>
+						</div>
+						<hr class="border-1 border-black w-32 mt-5 mb-5" />
+						<p class="text-[#12121299] mb-5">
+							Professional employees are there for you to pick<br />the most
+							amazing and fresh fruits.
+						</p>
+						<div class="flex items-center self-start">
+							<img
+								src="./images/team icon.png"
+								alt=""
+								class="mr-5 rounded-full bg-slate-300 p-5"
+							/>
+							<h2 class="text-2xl font-semibold">Dedicated Team</h2>
+						</div>
+						<hr class="border-1 border-black w-32 mt-5 mb-5" />
+						<p class="text-[#12121299] mb-5">
+							Professional employees are there for you to pick<br />the most
+							amazing and fresh fruits.
+						</p>
+						<div class="flex items-center self-start">
+							<img
+								src="./images/team icon.png"
+								alt=""
+								class="mr-5 rounded-full bg-slate-300 p-5"
+							/>
+							<h2 class="text-2xl font-semibold">Dedicated Team</h2>
+						</div>
+						<hr class="border-1 border-black w-32 mt-5 mb-5" />
+						<p class="text-[#12121299] mb-5">
+							Professional employees are there for you to pick<br />the most
+							amazing and fresh fruits.
+						</p>
 					</div>
 				</div>
 			</section>
