--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 				<!-- white banner -->
 
 				<section
-					class="max-w-screen-lg mx-auto invisible md:visible lg:visible"
+					class="max-w-screen-lg mx-auto invisible md:invisible lg:visible"
 				>
 					<div
 						class="flex justify-evenly items-center bg-white rounded-xl absolute left-[230px] -bottom-14 px-5 py-5"
@@ -334,7 +334,7 @@
 
 			<!-- modal details section -->
 			<section class="max-w-screen-xl mx-auto mb-24">
-				<div class="grid grid-cols-1 md:grid-cols-4 lg:grid-cols-4">
+				<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
 					<!-- card 1 -->
 					<div class="card w-96">
 						<figure><img src="/images/fruit6.png" alt="Shoes" /></figure>
@@ -909,7 +909,11 @@
 						</p>
 					</div>
 					<div class="">
-						<img src="./images/whychoose1.png" alt="" class="w-[400px]" />
+						<img
+							src="./images/whychoose1.png"
+							alt=""
+							class="w-[300px] md:w-[350px] lg:w-[400px]"
+						/>
 					</div>
 					<div class="">
 						<div class="flex items-center self-start">
