--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 				<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
 					<!-- card 1 -->
 					<div class="card w-96">
-						<figure><img src="/images/fruit6.png" alt="Shoes" /></figure>
+						<figure><img src="./images/fruit6.png" alt="Shoes" /></figure>
 						<div class="card-body">
 							<h2 class="text-3xl font-semibold text-center">
 								12.90$ - 18.85$
@@ -438,7 +438,7 @@
 					</div>
 					<!-- card 2 -->
 					<div class="card w-96">
-						<figure><img src="/images/fruit7.png" alt="Shoes" /></figure>
+						<figure><img src="./images/fruit7.png" alt="Shoes" /></figure>
 						<div class="card-body">
 							<h2 class="text-3xl font-semibold text-center">
 								12.90$ - 18.85$
@@ -538,7 +538,7 @@
 					</div>
 					<!-- card 3 -->
 					<div class="card w-96">
-						<figure><img src="/images/fruit8.png" alt="Shoes" /></figure>
+						<figure><img src="./images/fruit8.png" alt="Shoes" /></figure>
 						<div class="card-body">
 							<h2 class="text-3xl font-semibold text-center">
 								12.90$ - 18.85$
@@ -638,7 +638,7 @@
 					</div>
 					<!-- card 4 -->
 					<div class="card w-96">
-						<figure><img src="/images/fruit9.png" alt="Shoes" /></figure>
+						<figure><img src="./images/fruit9.png" alt="Shoes" /></figure>
 						<div class="card-body">
 							<h2 class="text-3xl font-semibold text-center">
 								12.90$ - 18.85$
@@ -758,7 +758,7 @@
 					<!-- card1 -->
 					<div class="card">
 						<figure class="px-10 pt-10">
-							<img src="/images/member1.png" alt="Shoes" class="rounded-xl" />
+							<img src="./images/member1.png" alt="Shoes" class="rounded-xl" />
 						</figure>
 						<div class="card-body items-center text-center">
 							<h2 class="card-title text-white">Awlad Hossain</h2>
@@ -782,7 +782,7 @@
 					<!-- card2 -->
 					<div class="card">
 						<figure class="px-10 pt-10">
-							<img src="/images/member2.png" alt="Shoes" class="rounded-xl" />
+							<img src="./images/member2.png" alt="Shoes" class="rounded-xl" />
 						</figure>
 						<div class="card-body items-center text-center">
 							<h2 class="card-title text-white">Safia Chowdhury</h2>
@@ -806,7 +806,7 @@
 					<!-- card3 -->
 					<div class="card">
 						<figure class="px-10 pt-10">
-							<img src="/images/member3.png" alt="Shoes" class="rounded-xl" />
+							<img src="./images/member3.png" alt="Shoes" class="rounded-xl" />
 						</figure>
 						<div class="card-body items-center text-center">
 							<h2 class="card-title text-white">Rokib Hossain</h2>
@@ -830,7 +830,7 @@
 					<!-- card4 -->
 					<div class="card">
 						<figure class="px-10 pt-10">
-							<img src="/images/member4.png" alt="Shoes" class="rounded-xl" />
+							<img src="./images/member4.png" alt="Shoes" class="rounded-xl" />
 						</figure>
 						<div class="card-body items-center text-center">
 							<h2 class="card-title text-white">Chaity</h2>
