--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					extend: {
 						backgroundImage: {
 							"banner-one": "url('./images/banner1.png')",
-							"fruit-banner": "url('./images/team.PNG')",
+							"fruit-banner": "url('./images/team.png')",
 						},
 						colors: {
 							clifford: "#da373d",
