--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 							<li><a>About us</a></li>
 							<li><a>Blog</a></li>
 							<li><a>Shop</a></li>
+							<!-- search bar -->
 							<div class="relative">
 								<form>
 									<input
@@ -88,7 +89,7 @@
 						</ul>
 					</div>
 					<div class="navbar-center hidden lg:flex">
-						<ul class="menu menu-horizontal px-1 text-white text-2xl">
+						<ul class="menu menu-horizontal px-1 text-white text-xl ml-10">
 							<li><a>Home</a></li>
 							<li><a>About us</a></li>
 							<li><a>Blog</a></li>
@@ -854,7 +855,7 @@
 				</div>
 			</section>
 			<!-- why choose us section -->
-			<section class="max-w-screen-xl mx-auto">
+			<section class="max-w-screen-xl mx-auto mb-32">
 				<h1 class="text-3xl font-semibold text-black text-center mb-10">
 					Why Choose Us
 				</h1>
@@ -960,6 +961,32 @@
 			</section>
 		</main>
 
-		<footer></footer>
+		<footer class="bg-[#121212] h-[500px]">
+			<div class="flex items-center justify-center py-10 md:py-16 lg:py-24">
+				<img src="./images/logo.png" alt="" class="w-8" />
+				<h1 class="text-white text-3xl text-center ml-5">Fruit Burst</h1>
+			</div>
+
+			<div
+				class="flex flex-col md:flex-row lg:flex-row items-center justify-evenly text-white list-none max-w-screen-xl mx-auto"
+			>
+				<li>Home</li>
+				<li>About Us</li>
+				<li>Shop</li>
+				<li>All fruits</li>
+				<li>Support</li>
+				<li>My Account</li>
+			</div>
+			<div
+				class="grid grid-flow-col items-center md:grid-cols-6 lg:grid-cols-6 list-none max-w-screen-sm mx-auto text-3xl my-5 md:my-16 lg:my-24"
+			>
+				<li><i class="bx bxl-twitter" style="color: #ffffff"></i></li>
+				<li><i class="bx bxl-facebook-circle" style="color: #0096ff"></i></li>
+				<li><i class="bx bxl-youtube" style="color: #fe060a"></i></li>
+				<li><i class="bx bxl-instagram-alt" style="color: #eeeded"></i></li>
+				<li><i class="bx bxl-apple" style="color: #eeeded"></i></li>
+				<li><i class="bx bxl-linkedin" style="color: #eeeded"></i></li>
+			</div>
+		</footer>
 	</body>
 </html>
